# hack-sound-server

./: .gitignore  .travis.yml  README.md  build-flatpak.sh  com.endlessm.HackSoundServer.appdata.xml  com.endlessm.HackSoundServer.json.in  com.endlessm.HackSoundServer.service  com.hack_computer.HackSoundServer.appdata.xml  com.hack_computer.HackSoundServer.json.in  hack-sound-server  meson.build  meson_options.txt  setup.py
ci/: metadata.schema.json
data/: metadata.json
data/sounds/FBE/: Theater_backside.webm
data/sounds/HackUnlock/: Ambient_Back.webm  Ambient_Front.webm  Ambient_Front_noclip.webm  Ambient_back_noclip.webm  Landing_front.webm  Success_Back.webm  Success_Back_loop.webm  Success_Front.webm  Wave_Back.webm
data/sounds/clubhouse/: Character_happy.webm  Character_irate.webm  CollectItem_2.webm  CollectItem_3.webm  character_dismiss.webm  character_invite.webm  character_talking.webm  clubhouse_ambient.webm  clubhouse_attract_event.webm  clubhouse_attract_jan29.webm  clubhouse_attract_loop.webm  clubhouse_attract_noclip.webm  clubhouse_button_hover.webm  clubhouse_close.webm  clubhouse_open.webm  dialog_popup.webm
data/sounds/codeview/: Code_error.webm  Code_solution.webm  Hacking_music1.webm  cursorDown.webm  cursorUp.webm  errorPopup - closed.webm  errorPopup - fixitButtonPress.webm  errorPopup - open.webm  key - delete big.webm  key - delete.webm  key - equals.webm  key - return.webm  key - slash.webm  key - space.webm  keyCombo - copy.webm  keyCombo - cut.webm  keyCombo - paste.webm  keyCombo - redo.webm  keyCombo - undo.webm  keyGeneric.webm  selectionDrag (per character).webm
data/sounds/common/: Estelle.webm  glitch.webm  juicy_button.webm  lockscreenInactive.webm  quest_deny.webm
data/sounds/fizzics/: BG_1.webm  BG_2.webm  Background_loop.webm  Background_loop2.webm  ButtonClick.webm  Cannot_Grab.webm  Collision.webm  Collision_bad.webm  Collision_gem_get.webm  Collision_goal.webm  Collision_neutral.webm  Collision_winning.webm  CreateBall_Species1.webm  CreateBall_Species2.webm  CreateBall_Species4.webm  Death_1.webm  Death_2.webm  Death_3.webm  Death_4.webm  Death_Species1.webm  Death_Species2.webm  Death_Species4.webm  Fly_Species1.webm  Fly_Species2.webm  Fly_Species5.webm  Next_Level.webm  Select_Species1_a.webm  Select_Species1_b.webm  Select_Species1_c.webm  Select_Species2_a.webm  Select_Species2_b.webm  Select_Species2_c.webm  Select_Species3_b.webm  Select_Species4_a.webm  Select_Species5_c.webm  Slingshot_Grab.webm  Slingshot_Pull_Loop.webm  Slingshot_Release.webm  Slingshot_Ungrab.webm  Success_Species1.webm  (+17 more)
data/sounds/hackdex1/: roster-crash.webm
data/sounds/hackdex2/: cat_purring1.webm  cat_purring2.webm  cat_purring3.webm  cat_screaming.webm  collision_gem_get.webm  dobroide1.webm  dobroide2.webm  dobroide3.webm  hamface_cat.webm  hank1.webm  hank2.webm  hungry_cats.webm  leviathan_articles.webm  leviathan_board.webm  leviathan_hover.webm  lilpur.webm  timpani-start-win.webm
data/sounds/lightspeed/: asteroid-crash.webm  asteroid-passing.webm  astroid-pass-faster.webm  astronaut-help.webm  astronaut-missed.webm  astronaut-thanks.webm  level-complete.webm  thrust-down.webm  thrust-up.webm  timpani-start-win.webm
data/sounds/operatingSystem/: daemons.webm  subsystem-close.webm  subsystem-open.webm  system-null.webm  system-window.webm
data/sounds/quests/: Ada.webm  Ada_intro.webm  Ada_piano.webm  CollectItem_1.webm  Key-fob1-glow.webm  Key-fob2-more-glow.webm  Riley_intro.webm  Rileys_song.webm  Saniel2.webm  Saniel_intro.webm  cat-glitch-loop.webm  cat-sfx1.webm  clarifying.webm  device-hope.webm  ep4end - 1 last level.webm  ep4end - 2 stalked.webm  ep4end - 3 riley escape.webm  ep4end - 4 cooldown.webm  ep4end - 5 AI concerns.webm  faber-conga-build.webm  faber-make-stealth.webm  faber-werks.webm  fabers-fizzics.webm  guitar-easy1.webm  guitar-easy2.webm  guitar-plain.webm  hihat-sneaker.webm  horse-tale.webm  key_confirm.webm  key_given.webm  key_given_tune.webm  pink panther edit.webm  quest_accept.webm  quest_accepted.webm  quest_challenge_completed.webm  quest_march.webm  quest_proposed.webm  quest_sneaky.webm  ricky_rescued.webm  riley_intro-stinger.webm  (+15 more)
data/sounds/soundpacks/: sfxgroup_drumkit1.webm  sfxgroup_drumkit2.webm  sfxgroup_drumkit3.webm  sfxgroup_drumkit4.webm  sfxgroup_drumkit5.webm  sfxgroup_drumkit6.webm  sfxgroup_idm1.webm  sfxgroup_idm2.webm  sfxgroup_idm3.webm  (+27 more)
docs/: HACKING.md
examples/: focuswatcher.py
hack_sound_server/: __init__.py  main.py.in  registry.py  sound.py
service/: com.endlessm.HackSoundServer.service.in  com.endlessm.HackSoundServer2.service  com.hack_computer.HackSoundServer.service.in
src/: configure.py.in  registry.py  server.py  sound.py
src/dbus/: hackableapp.py  misc.py  system.py  watcher.py
src/future/: __init__.py  sound.py
src/utils/: loggable.py  metadata.py  misc.py
src/v2/: player.py  server.py  sound.py
tools/: build-local-flatpak.sh  check-ffmpeg.sh  check-metadata.py  convert-sounds.sh  get-duration.sh  requirements.txt  sort-metadata.py  truncate-silence.sh
(+84 files in other folders)
